[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/scaffold/src/gui/level_select/LevelSelectItemUnlockedHeader.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_l.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/scaffold/assets/images/gui/left_caret_normal.png" type="Texture" id=3]





[node name="LevelSelectItemUnlockedHeader" type="Button"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 56 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 56 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="HBoxContainer"]
margin_top = 29.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelNumber" type="Label" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 46.0
margin_bottom = 58.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 2 )
align = 2

[node name="LevelName" type="Label" parent="HBoxContainer"]
margin_left = 62.0
margin_right = 357.0
margin_bottom = 58.0
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )

[node name="CaretWrapper" type="Control" parent="HBoxContainer"]
margin_left = 372.0
margin_top = 21.0
margin_right = 383.5
margin_bottom = 37.0
rect_min_size = Vector2( 11.5, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Caret" type="TextureRect" parent="HBoxContainer/CaretWrapper"]
margin_left = -5.75
margin_top = -8.0
margin_right = 17.25
margin_bottom = 24.0
rect_rotation = 270.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 11.5, 16 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="HBoxContainer"]
margin_left = 400.0
margin_top = 29.0
margin_right = 400.0
margin_bottom = 29.0
size_flags_horizontal = 4
size_flags_vertical = 4
[connection signal="pressed" from="." to="." method="_on_LevelSelectItemUnlockedHeader_pressed"]
